# chess-engine

./: .gitignore  AGENTS.md  CMakeLists.txt  PROGRESS.md  README.md  config.json  findings.md  games.pgn
.github/containers/sprt/: Dockerfile
.github/workflows/: action-diag.yml  ci.yml  release.yml  sprt.yml
bench/: chess-engine-old  fastchess  run-fastchess-sprt.sh
cmake/: version.h.in
scripts/: run-fastchess-sprt.sh  setup-lichess-bot-runtime.sh  summarize-sprt.sh  verify-bench-signature.sh
src/: bot_main.cpp  main.cpp
src/bot/: client.cpp  client.h  decision.h  manager.cpp  manager.h
src/engine/: attacks.cpp  attacks.h  board.cpp  board.h  book.cpp  book.h  eval.cpp  eval.h  eval_params.h  movegen.cpp  movegen.h  poly_keys.h  search.cpp  search.h  see.cpp  see.h  tt.cpp  tt.h  tune.cpp  tune.h  types.cpp  types.h  uci.cpp  uci.h
test/: test_board.cpp  test_book.cpp  test_bot.cpp  test_eval.cpp  test_movegen.cpp  test_search.cpp  test_see.cpp  test_tune.cpp  test_uci.cpp
test/fixtures/: bench-reference.json  tactical.epd  tune-small.txt
tools/: bench.cpp
